--- a/taxi/trans.css
+++ b/taxi/trans.css
@@ -49,3 +49,15 @@ label {
 	opacity: 0.5px;
 	font-size: 19px;
 }
+.submit2 {
+	width:20%;
+	background-color: rgba(27,31,34,0.85);
+	color: white;
+
+}
+
+.submit2:hover{
+	background-color: #fff2;
+	opacity: 0.5px;
+	font-size: 19px;
+}
